--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stylus-framework",
   "version": "1.0.1",
   "description": "CSS Framework",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
