--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stylus-framework",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "CSS Framework",
   "main": "app.js",
   "type": "module",
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/pieroblunda/stylus-framework#readme",
   "devDependencies": {
     "colors": "^1.4.0",
-    "pug": "^3.0.2",
+    "pug": "^3.0.2"
+  },
+  "dependencies": {
     "stylus": "^0.59.0"
   }
 }
